 * Support AGM decoder

Access:
 * Enable SMB2 / SMB3 support on mobile ports with libsmb2
 * Added support for the RIST (Reliable Internet Stream Transport) Protocol
 * Added avaudiocapture module as a replacement for qtsound, which is removed now
 * Audio CD data tracks are now correctly detected and skipped
 * Deprecates Audio CD CDDB lookups in favor of more accurate Musicbrainz

Access output:
 * Added support for the RIST (Reliable Internet Stream Transport) Protocol

Video output:
 * Added X11 RENDER video output plugin
 * Remove aa plugin
 * Remove evas plugin
 * Remove omxil_vout plugin
 * Remove RealRTSP plugin
 * Remove Real demuxer plugin

Video filter:
 * Update yadif
 * Remove remote OSD plugin

Stream output:
 * New SDI output with improved audio and ancillary support.
   Candidate for deprecation of decklink vout/aout modules.
 * Support for DLNA/UPNP renderers

Service discovery:
 * Support Renderer discovery with avahi

macOS:
 * Remove Growl notification support
 * Improved AppleScript API with support for playback modes, recording, rate

appleOS:
 * Improved proxy configuration handling


Changes between 3.0.6 and 3.0.7:
--------------------------------

Access:
 * Improve Blu-ray support

Audio output:
 * Fix pass-through on Android-23

Video Output:
 * Fix 12 bits sources playback with Direct3D11
 * Fix crash on iOS

Stream Output:
 * Improve Chromecast support with new ChromeCast apps

Misc:
 * Update Youtube, Dailymotion, Vimeo scripts


Changes between 3.0.5 and 3.0.6:
--------------------------------

Core:
 * Fix potential subtitle picture allocation failures

Codec:
 * Add support for 12 bits decoding of AV1
 * Fix HDR support in AV1 when the container provides the metadata


Changes between 3.0.4 and 3.0.5:
--------------------------------

Access:
 * Improve RTSP playback
 * BluRay fixes and improvements, notably for menus and seeking
 * Improve the UDP/RTP truncated issue

Codec:
 * Add a new AV1 decoder based on dav1d library